--- a/1.md
+++ b/1.md
@@ -1,5 +1,243 @@
-
-| left | center | right |
-| :--- | :----: | ----: |
-| aaaa | bbbbbb | ccccc |
-| a    | b      | c     |
+<table>
+    <tr>
+        <td>Conf.</td>
+        <td>Methods</td>
+        <td>FaceForensics++ (raw)</td>
+        <td>FaceForensics++ (c23)</td>
+        <td>FaceForensics++ (c40)</td>
+        <td>UADFV</td>
+        <td>DeepfakeTIMIT-LQ</td>
+        <td>DeepfakeTIMIT-HQ</td>
+        <td>FaceForensic</td>
+        <td>DFFD</td>
+        <td>celeb-DF</td>
+        <td>DFDC</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td>accuracy</td>
+        <td>accuracy/AUC</td>
+        <td>accuracy/AUC</td>
+        <td>AUC</td>
+        <td>AUC</td>
+        <td>AUC</td>
+        <td>accuracy</td>
+        <td>AUC/EER</td>
+        <td>AUC/EER</td>
+        <td>AUC/EER</td>
+    </tr>
+    <tr>
+        <td>ECCV20</td>
+        <td>[ECCV2020]Two-branch Recurrent Network</td>
+        <td>-</td>
+        <td>96.43/99.12</td>
+        <td>86.34/91.10</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>"FG20</td>
+    </tr>
+    <tr>
+        <td>"</td>
+        <td>[FG2020]3D ResNet</td>
+        <td>-</td>
+        <td>-</td>
+        <td>83.86</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>[FG2020]3D ResNeXt</td>
+        <td>-</td>
+        <td>-</td>
+        <td>85.14</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>[FG2020]I3D</td>
+        <td>-</td>
+        <td>-</td>
+        <td>87.43</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>CVPR20</td>
+        <td>[CVPR2020]VGG16</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>96.95/8.43</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>[CVPR2020]VGG16+MAM</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>99.67/2.66</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>ICCV19</td>
+        <td>[ICCV2019]XceptionNet</td>
+        <td>99.26</td>
+        <td>95.73/92.50</td>
+        <td>81.00/86.75</td>
+        <td>96.8</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>99.61/2.88</td>
+        <td>83.60/28.55</td>
+        <td>91.17/17.55</td>
+    </tr>
+    <tr>
+        <td>ICASSP19</td>
+        <td>[ICASSP2019]HeadPose</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>89</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>CVPRW19</td>
+        <td>[CVPRW2019]ResNet50-finetune</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>97.4</td>
+        <td>99.9</td>
+        <td>93.2</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>BTAS19</td>
+        <td>[BTAS2019]Y-shaped Autorncoder</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>92.77</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>CVPRW19</td>
+        <td>[CVPRW2019]FWA</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>97.4</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>ICASSP19</td>
+        <td>[ICASSP2019]capsule</td>
+        <td>99.52</td>
+        <td>-</td>
+        <td>-</td>
+        <td>99.9</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>82.46/24.29</td>
+        <td>87.45/21.39</td>
+    </tr>
+    <tr>
+        <td>WIFS18</td>
+        <td>[WIFS2018]MesoNet</td>
+        <td>95.23</td>
+        <td>83.1</td>
+        <td>70.47</td>
+        <td>84.3</td>
+        <td>87.8</td>
+        <td>68.4</td>
+        <td>93.4</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>arxiv18</td>
+        <td>[arxiv2018]FT</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>92.6</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>CVPRW17</td>
+        <td>[CVPRW2017]two-stream NN</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>85.1</td>
+        <td>83.5</td>
+        <td>73.5</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+</table>
