--- a/1.md
+++ b/1.md
@@ -29,7 +29,7 @@
     </tr>
     <tr>
         <td>ECCV20</td>
-        <td>[ECCV2020]Two-branch Recurrent Network</td>
+        <td>Two-branch Recurrent Network</td>
         <td>-</td>
         <td>96.43/99.12</td>
         <td>86.34/91.10</td>
@@ -46,7 +46,7 @@
     </tr>
     <tr>
         <td>"</td>
-        <td>[FG2020]3D ResNet</td>
+        <td>3D ResNet</td>
         <td>-</td>
         <td>-</td>
         <td>83.86</td>
@@ -60,7 +60,7 @@
     </tr>
     <tr>
         <td></td>
-        <td>[FG2020]3D ResNeXt</td>
+        <td>3D ResNeXt</td>
         <td>-</td>
         <td>-</td>
         <td>85.14</td>
@@ -74,7 +74,7 @@
     </tr>
     <tr>
         <td></td>
-        <td>[FG2020]I3D</td>
+        <td>I3D</td>
         <td>-</td>
         <td>-</td>
         <td>87.43</td>
@@ -88,7 +88,7 @@
     </tr>
     <tr>
         <td>CVPR20</td>
-        <td>[CVPR2020]VGG16</td>
+        <td>VGG16</td>
         <td>-</td>
         <td>-</td>
         <td>-</td>
@@ -102,7 +102,7 @@
     </tr>
     <tr>
         <td></td>
-        <td>[CVPR2020]VGG16+MAM</td>
+        <td>VGG16+MAM</td>
         <td>-</td>
         <td>-</td>
         <td>-</td>
@@ -116,7 +116,7 @@
     </tr>
     <tr>
         <td>ICCV19</td>
-        <td>[ICCV2019]XceptionNet</td>
+        <td>XceptionNet</td>
         <td>99.26</td>
         <td>95.73/92.50</td>
         <td>81.00/86.75</td>
@@ -130,7 +130,7 @@
     </tr>
     <tr>
         <td>ICASSP19</td>
-        <td>[ICASSP2019]HeadPose</td>
+        <td>HeadPose</td>
         <td>-</td>
         <td>-</td>
         <td>-</td>
@@ -144,7 +144,7 @@
     </tr>
     <tr>
         <td>CVPRW19</td>
-        <td>[CVPRW2019]ResNet50-finetune</td>
+        <td>ResNet50-finetune</td>
         <td>-</td>
         <td>-</td>
         <td>-</td>
@@ -158,7 +158,7 @@
     </tr>
     <tr>
         <td>BTAS19</td>
-        <td>[BTAS2019]Y-shaped Autorncoder</td>
+        <td>Y-shaped Autorncoder</td>
         <td>-</td>
         <td>-</td>
         <td>-</td>
@@ -172,7 +172,7 @@
     </tr>
     <tr>
         <td>CVPRW19</td>
-        <td>[CVPRW2019]FWA</td>
+        <td>FWA</td>
         <td>-</td>
         <td>-</td>
         <td>-</td>
@@ -186,7 +186,7 @@
     </tr>
     <tr>
         <td>ICASSP19</td>
-        <td>[ICASSP2019]capsule</td>
+        <td>capsule</td>
         <td>99.52</td>
         <td>-</td>
         <td>-</td>
@@ -200,7 +200,7 @@
     </tr>
     <tr>
         <td>WIFS18</td>
-        <td>[WIFS2018]MesoNet</td>
+        <td>MesoNet</td>
         <td>95.23</td>
         <td>83.1</td>
         <td>70.47</td>
@@ -214,7 +214,7 @@
     </tr>
     <tr>
         <td>arxiv18</td>
-        <td>[arxiv2018]FT</td>
+        <td>ForensicTransfer</td>
         <td>-</td>
         <td>-</td>
         <td>-</td>
@@ -228,7 +228,7 @@
     </tr>
     <tr>
         <td>CVPRW17</td>
-        <td>[CVPRW2017]two-stream NN</td>
+        <td>two-stream NN</td>
         <td>-</td>
         <td>-</td>
         <td>-</td>
