--- a/1.md
+++ b/1.md
@@ -1,243 +1,243 @@
-<table>
+# Comparision
+Compare performances of algorithms on Deepfake Detection.
+
+<!-- #### Contents
+- [Deepfake Detection]() -->
+
+<table class="center">
+   </font>
+<font size="1" face="Courier New" >
     <tr>
-        <td>Conf.</td>
-        <td>Methods</td>
-        <td>FaceForensics++ (raw)</td>
-        <td>FaceForensics++ (c23)</td>
-        <td>FaceForensics++ (c40)</td>
-        <td>UADFV</td>
-        <td>DeepfakeTIMIT-LQ</td>
-        <td>DeepfakeTIMIT-HQ</td>
-        <td>FaceForensic</td>
-        <td>DFFD</td>
-        <td>celeb-DF</td>
-        <td>DFDC</td>
+        <td rowspan="2";><b>Conf.<b></td>
+        <td rowspan="2"><b>Methods<b></td>
+        <td><b>FaceForensics++ (raw)<b></td>
+        <td><b>FaceForensics++ (c23)<b></td>
+        <td><b>FaceForensics++ (c40)<b></td>
+        <td><b>UADFV<b></td>
+        <td><b>DeepfakeTIMIT-LQ<b></td>
+        <td><b>DeepfakeTIMIT-HQ<b></td>
+        <td><b>FaceForensic<b></td>
+        <td><b>DFFD<b></td>
+        <td><b>celeb-DF<b></td>
+        <td><b>DFDC<b></td>
     </tr>
     <tr>
-        <td></td>
-        <td></td>
-        <td>accuracy</td>
-        <td>accuracy/AUC</td>
-        <td>accuracy/AUC</td>
-        <td>AUC</td>
-        <td>AUC</td>
-        <td>AUC</td>
-        <td>accuracy</td>
-        <td>AUC/EER</td>
-        <td>AUC/EER</td>
-        <td>AUC/EER</td>
+        <td><font size="1"> <b><sup>accuracy<sup><b></td>
+        <td><font size="1"> <b><sup>accuracy/AUC<sup><b></td>
+        <td><font size="1"> <b><sup>accuracy/AUC<sup><b></td>
+        <td><font size="1"> <b><sup>AUC<sup><b></td>
+        <td><font size="1"> <b><sup>AUC<sup><b></td>
+        <td><font size="1"> <b><sup>AUC<sup><b></td>
+        <td><font size="1"> <b><sup>accuracy<sup><b></td>
+        <td><font size="1"> <b><sup>AUC/EER<sup><b></td>
+        <td><font size="1"> <b><sup>AUC/EER<sup><b></td>
+        <td><font size="1"> <b><sup>AUC/EER<sup><b></td>
     </tr>
     <tr>
-        <td>ECCV20</td>
-        <td>Two-branch Recurrent Network</td>
-        <td>-</td>
-        <td>96.43/99.12</td>
-        <td>86.34/91.10</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td><b>ECCV20<b></td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">Two-branch Recurrent Network</a><b></td>
+        <td><sub>-<sub></td>
+        <td><sub>96.43/99.12<sub></td>
+        <td><sub>86.34/91.10<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td>"FG20</td>
+        <td rowspan="3"><b>FG20<b></td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">3D ResNet</a><b></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>83.86<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td>"</td>
-        <td>3D ResNet</td>
-        <td>-</td>
-        <td>-</td>
-        <td>83.86</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">3D ResNeXt</a><b></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>85.14<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td></td>
-        <td>3D ResNeXt</td>
-        <td>-</td>
-        <td>-</td>
-        <td>85.14</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">I3D</a><b></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>87.43<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td></td>
-        <td>I3D</td>
-        <td>-</td>
-        <td>-</td>
-        <td>87.43</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td rowspan = "2"><b>CVPR20<b></td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">VGG16</a><b></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>96.95/8.43<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td>CVPR20</td>
-        <td>VGG16</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>96.95/8.43</td>
-        <td>-</td>
-        <td>-</td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">VGG16+MAM</a><b></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>99.67/2.66<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td></td>
-        <td>VGG16+MAM</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>99.67/2.66</td>
-        <td>-</td>
-        <td>-</td>
+        <td><b>ICCV19<b></td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">XceptionNet</a><b></td>
+        <td><sub>99.26<sub></td>
+        <td><sub>95.73/92.50<sub></td>
+        <td><sub>81.00/86.75<sub></td>
+        <td><sub>96.8<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>99.61/2.88<sub></td>
+        <td><sub>83.60/28.55<sub></td>
+        <td><sub>91.17/17.55<sub></td>
     </tr>
     <tr>
-        <td>ICCV19</td>
-        <td>XceptionNet</td>
-        <td>99.26</td>
-        <td>95.73/92.50</td>
-        <td>81.00/86.75</td>
-        <td>96.8</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>99.61/2.88</td>
-        <td>83.60/28.55</td>
-        <td>91.17/17.55</td>
+        <td><b>ICASSP19<b></td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">HeadPose</a><b></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>89<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td>ICASSP19</td>
-        <td>HeadPose</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>89</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td><b>CVPRW19<b></td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">ResNet50-finetune</a><b></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>97.4<sub></td>
+        <td><sub>99.9<sub></td>
+        <td><sub>93.2<<sub>/td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td>CVPRW19</td>
-        <td>ResNet50-finetune</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>97.4</td>
-        <td>99.9</td>
-        <td>93.2</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td><b>BTAS19<b></td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">Y-shaped Autorncoder</a><b></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>92.77<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td>BTAS19</td>
-        <td>Y-shaped Autorncoder</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>92.77</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td><b>CVPRW19<b></td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">FWA</a><b></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>97.4<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td>CVPRW19</td>
-        <td>FWA</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>97.4</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td><b>ICASSP19<b></td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">capsule</a><b></td>
+        <td><sub>99.52<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>99.9<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>82.46/24.29<sub></td>
+        <td><sub>87.45/21.39<sub></td>
     </tr>
     <tr>
-        <td>ICASSP19</td>
-        <td>capsule</td>
-        <td>99.52</td>
-        <td>-</td>
-        <td>-</td>
-        <td>99.9</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>82.46/24.29</td>
-        <td>87.45/21.39</td>
-    </tr>
-    <tr>
-        <td>WIFS18</td>
-        <td>MesoNet</td>
-        <td>95.23</td>
-        <td>83.1</td>
-        <td>70.47</td>
-        <td>84.3</td>
-        <td>87.8</td>
-        <td>68.4</td>
-        <td>93.4</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td><b>WIFS18<b></td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">MesoNet</a><b></td>
+        <td><sub>95.23<sub></td>
+        <td><sub>83.1<sub></td>
+        <td><sub>70.47<sub></td>
+        <td><sub>84.3<sub></td>
+        <td><sub>87.8<sub></td>
+        <td><sub>68.4<sub></td>
+        <td><sub>93.4<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
     <tr>
         <td>arxiv18</td>
-        <td>ForensicTransfer</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>92.6</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">ForensicTransfer</a><b></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>92.6<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td>CVPRW17</td>
-        <td>two-stream NN</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>85.1</td>
-        <td>83.5</td>
-        <td>73.5</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td><b>CVPRW17<b></td>
+        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">two-stream NN</a><b></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>85.1<sub></td>
+        <td><sub>83.5<sub></td>
+        <td><sub>73.5<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
+        <td><sub>-<sub></td>
     </tr>
 </table>
