--- a/1.md
+++ b/1.md
@@ -150,7 +150,7 @@ Compare performances of algorithms on Deepfake Detection.
         <td><sub>-<sub></td>
         <td><sub>97.4<sub></td>
         <td><sub>99.9<sub></td>
-        <td><sub>93.2<<sub>/td>
+        <td><sub>93.2<sub></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
