--- a/1.md
+++ b/1.md
@@ -35,7 +35,7 @@ Compare performances of algorithms on Deepfake Detection.
     </tr>
     <tr>
         <td><b>ECCV20<b></td>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">Two-branch Recurrent Network</a><b></td>
+        <td><b><a href="https://arxiv.org/pdf/2008.03412.pdf">Two-branch Recurrent Network</a><b></td>
         <td><sub>-<sub></td>
         <td><sub>96.43/99.12<sub></td>
         <td><sub>86.34/91.10<sub></td>
@@ -49,7 +49,7 @@ Compare performances of algorithms on Deepfake Detection.
     </tr>
     <tr>
         <td rowspan="3"><b>FG20<b></td>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">3D ResNet</a><b></td>
+        <td><b><a href="https://hal.inria.fr/hal-02862476/document">3D ResNet</a><b></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
         <td><sub>83.86<sub></td>
@@ -62,7 +62,7 @@ Compare performances of algorithms on Deepfake Detection.
         <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">3D ResNeXt</a><b></td>
+        <td><b><a href="https://hal.inria.fr/hal-02862476/document">3D ResNeXt</a><b></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
         <td><sub>85.14<sub></td>
@@ -75,7 +75,7 @@ Compare performances of algorithms on Deepfake Detection.
         <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">I3D</a><b></td>
+        <td><b><a href="https://hal.inria.fr/hal-02862476/document">I3D</a><b></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
         <td><sub>87.43<sub></td>
@@ -89,7 +89,7 @@ Compare performances of algorithms on Deepfake Detection.
     </tr>
     <tr>
         <td rowspan = "2"><b>CVPR20<b></td>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">VGG16</a><b></td>
+        <td><b><a href="https://arxiv.org/pdf/1910.01717.pdf">VGG16</a><b></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
@@ -102,7 +102,7 @@ Compare performances of algorithms on Deepfake Detection.
         <td><sub>-<sub></td>
     </tr>
     <tr>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">VGG16+MAM</a><b></td>
+        <td><b><a href="https://arxiv.org/pdf/1910.01717.pdf">VGG16+MAM</a><b></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
@@ -116,7 +116,7 @@ Compare performances of algorithms on Deepfake Detection.
     </tr>
     <tr>
         <td><b>ICCV19<b></td>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">XceptionNet</a><b></td>
+        <td><b><a href="https://openaccess.thecvf.com/content_ICCV_2019/papers/Rossler_FaceForensics_Learning_to_Detect_Manipulated_Facial_Images_ICCV_2019_paper.pdf">XceptionNet</a><b></td>
         <td><sub>99.26<sub></td>
         <td><sub>95.73/92.50<sub></td>
         <td><sub>81.00/86.75<sub></td>
@@ -130,7 +130,7 @@ Compare performances of algorithms on Deepfake Detection.
     </tr>
     <tr>
         <td><b>ICASSP19<b></td>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">HeadPose</a><b></td>
+        <td><b><a href="https://sci-hub.st/https://ieeexplore.ieee.org/abstract/document/8683164">HeadPose</a><b></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
@@ -144,7 +144,7 @@ Compare performances of algorithms on Deepfake Detection.
     </tr>
     <tr>
         <td><b>CVPRW19<b></td>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">ResNet50-finetune</a><b></td>
+        <td><b><a href="https://openaccess.thecvf.com/content_CVPRW_2019/papers/Media%20Forensics/Li_Exposing_DeepFake_Videos_By_Detecting_Face_Warping_Artifacts_CVPRW_2019_paper.pdf">ResNet50-finetune</a><b></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
@@ -158,7 +158,7 @@ Compare performances of algorithms on Deepfake Detection.
     </tr>
     <tr>
         <td><b>BTAS19<b></td>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">Y-shaped Autorncoder</a><b></td>
+        <td><b><a href="https://arxiv.org/pdf/1906.06876.pdf">Y-shaped Autorncoder</a><b></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
@@ -172,7 +172,7 @@ Compare performances of algorithms on Deepfake Detection.
     </tr>
     <tr>
         <td><b>CVPRW19<b></td>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">FWA</a><b></td>
+        <td><b><a href="https://openaccess.thecvf.com/content_CVPRW_2019/papers/Media%20Forensics/Li_Exposing_DeepFake_Videos_By_Detecting_Face_Warping_Artifacts_CVPRW_2019_paper.pdf">FWA</a><b></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
@@ -186,7 +186,7 @@ Compare performances of algorithms on Deepfake Detection.
     </tr>
     <tr>
         <td><b>ICASSP19<b></td>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">capsule</a><b></td>
+        <td><b><a href="https://arxiv.org/pdf/1910.12467.pdf">capsule</a><b></td>
         <td><sub>99.52<sub></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
@@ -200,7 +200,7 @@ Compare performances of algorithms on Deepfake Detection.
     </tr>
     <tr>
         <td><b>WIFS18<b></td>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">MesoNet</a><b></td>
+        <td><b><a href="https://sci-hub.st/https://ieeexplore.ieee.org/abstract/document/8630761">MesoNet</a><b></td>
         <td><sub>95.23<sub></td>
         <td><sub>83.1<sub></td>
         <td><sub>70.47<sub></td>
@@ -214,7 +214,7 @@ Compare performances of algorithms on Deepfake Detection.
     </tr>
     <tr>
         <td>arxiv18</td>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">ForensicTransfer</a><b></td>
+        <td><b><a href="https://arxiv.org/pdf/1812.02510.pdf">ForensicTransfer</a><b></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
@@ -228,7 +228,7 @@ Compare performances of algorithms on Deepfake Detection.
     </tr>
     <tr>
         <td><b>CVPRW17<b></td>
-        <td><b><a href="https://arxiv.org/pdf/2006.10721.pdf">two-stream NN</a><b></td>
+        <td><b><a href="https://openaccess.thecvf.com/content_cvpr_2017_workshops/w28/papers/Davis_Two-Stream_Neural_Networks_CVPR_2017_paper.pdf">two-stream NN</a><b></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
         <td><sub>-<sub></td>
